# swisslandstats-geopy

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  environment-dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements-geo.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  release_to_pypi.yml  tests.yml
docs/: Makefile  requirements.txt
docs/src/: conf.py  index.rst  swisslandstats.rst
examples/: Makefile  overview.ipynb
paper/: paper.bib  paper.md
sfso_geopy/: __init__.py
swisslandstats/: __init__.py  dataframe.py  geometry.py  plotting.py  settings.py  utils.py
tests/: test_sls.py
tests/input_data/: dataset.csv  sls.csv
