[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swisslandstats-geopy"
version = "0.11.0"
description = "Python for the Swiss Federal Statistics Geodata"
readme = "README.md"
authors = [
    { name = "Martí Bosch", email = "marti.bosch@epfl.ch" },
]
license = { text = "GPL-3.0" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib >= 2.2.0",
    "numpy >= 1.15.0",
    "pandas >= 0.17.0",
    "rasterio >= 1.0.0",
    "requests-cache",
    "xarray",
]

[project.urls]
Repository = "https://github.com/martibosch/swisslandstats-geopy"

[project.optional-dependencies]
geo = ["geopandas >= 0.10.0", "osmnx >= 1.0.0"]
test = ["coverage[toml]", "pytest", "pytest-cov", "responses", "ruff"]
dev = ["build", "commitizen", "pre-commit", "pip", "toml", "tox", "tox-uv", "twine"]
doc = ["m2r2", "pydata-sphinx-theme", "sphinx"]

[tool.codespell]
ignore-words-list = "nd,mis"

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = true
tag_format = "v$version"
version_provider = "pep621"
version_files = [
    "swisslandstats/__init__.py",
    "pyproject.toml:version"
]

[tool.coverage.run]
source = ["swisslandstats"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError",
    "except ImportError",
]
ignore_errors = true
omit = ["tests/*", "docs/conf.py"]

[tool.nbqa.addopts]
ruff = [
    "--ignore=D,E402,I001",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["D", "E", "F", "I", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["swisslandstats"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"tests/test_sls.py" = ["D"]
"docs/src/conf.py" = ["D"]

[tool.setuptools.packages.find]
include = ["swisslandstats", "swisslandstats.*"]
